UPDATE: refactor select to cards
